# AdvancedContentOrganizer

./: CMakeLists.txt  README.md  main.cpp
components/: indexhandler.cpp  indexhandler.h
components/auth/: account.cpp  account.h  accountmanager.cpp  accountmanager.h  authhandler.cpp  authhandler.h
components/data/: dataconverter.cpp  dataconverter.h  datastorer.cpp  datastorer.h
components/database/: databaserel.cpp  databaserel.h  dbconfig.cpp  dbconfig.h  dbrelbuilder.cpp  dbrelbuilder.h  tables.cpp  tables.h
components/database/strategies/common/: dbrelbuilderstrategy.cpp  dbrelbuilderstrategy.h  dbrelcontrolstrategy.cpp  dbrelcontrolstrategy.h  dbrelpack.cpp  dbrelpack.h
components/database/strategies/mysql/: dbrelbuildermysql.cpp  dbrelbuildermysql.h  dbrelcontrolmysql.cpp  dbrelcontrolmysql.h  dbrelpackmysql.cpp  dbrelpackmysql.h  mysql.h
components/logs/: logdata.cpp  logdata.h  logger.cpp  logger.h
components/network/: client.cpp  client.h  host.cpp  host.h  hostlistener.cpp  hostlistener.h  networkconvert.cpp  networkconvert.h  networksender.cpp  networksender.h
components/network/handler/: basehandler.h  requesthandler.cpp  requesthandler.h  responsehandler.cpp  responsehandler.h
components/network/items/: connection.h  networkdata.cpp  networkdata.h  request.cpp  request.h  response.cpp  response.h
components/network/items/backup/: connection.cpp  connection.h
components/network/transfer/: filenetworktransfer.cpp  filenetworktransfer.h  filenetworkworker.cpp  filenetworkworker.h  streamnetworktransfer.cpp  streamnetworktransfer.h
main/: appinit.cpp  appinit.h  appmanager.cpp  appmanager.h  globalinstances.cpp  globalinstances.h  program.cpp  program.h
main/mvc/: controller.cpp  controller.h  model.cpp  model.h  view.cpp  view.h
main/mvc/model_parts/: client.cpp  client.h  connections.cpp  connections.h  server.cpp  server.h
ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  old.ui
ui/dialogs/: additemtoserverdialog.cpp  additemtoserverdialog.h  additemtoserverdialog.ui  addserverconnectdialog.cpp  addserverconnectdialog.h  addserverconnectdialog.ui  addserverlogindialog.cpp  addserverlogindialog.h  addserverlogindialog.ui  watchdbdialog.cpp  watchdbdialog.h
ui/widgets/: servertreeview.cpp  servertreeview.h
utils/: MySQL_create_tables_query.txt  datetimeutils.cpp  datetimeutils.h  error_strings.cpp  error_strings.h  filesystemutils.cpp  filesystemutils.h  helpers.cpp  helpers.h  logdict.cpp  logdict.h  networkjsoncreator.cpp  networkjsoncreator.h  resulthandler.cpp  resulthandler.h  strdict.cpp  strdict.h
utils/logdict_data/: logdict_enum.h  logdict_map.cpp  logdict_map.h
